[gd_scene load_steps=14 format=2]

[ext_resource path="res://nanogames/gadget_inspection/_assets/meter.png" type="Texture" id=1]
[ext_resource path="res://nanogames/gadget_inspection/main.gd" type="Script" id=2]
[ext_resource path="res://nanogames/gadget_inspection/_assets/panel.png" type="Texture" id=3]
[ext_resource path="res://nanogames/gadget_inspection/_assets/light.png" type="Texture" id=4]
[ext_resource path="res://nanogames/gadget_inspection/_assets/pointer.png" type="Texture" id=5]
[ext_resource path="res://nanogames/gadget_inspection/_assets/bolts.png" type="Texture" id=6]
[ext_resource path="res://nanogames/gadget_inspection/_assets/indicators.png" type="Texture" id=7]
[ext_resource path="res://nanogames/gadget_inspection/_assets/music.ogg" type="AudioStream" id=8]
[ext_resource path="res://nanogames/gadget_inspection/_assets/shake.wav" type="AudioStream" id=9]
[ext_resource path="res://nanogames/gadget_inspection/_assets/victory.wav" type="AudioStream" id=11]

[sub_resource type="Animation" id=1]
resource_name = "light_dance"
tracks/0/type = "value"
tracks/0/path = NodePath("Lights/Border1/Light:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 0, 1, 0.498039, 1 ), Color( 0.101961, 0.101961, 0.101961, 1 ), Color( 0, 1, 0.498039, 1 ), Color( 0.101961, 0.101961, 0.101961, 1 ), Color( 0, 1, 0.498039, 1 ), Color( 0.101961, 0.101961, 0.101961, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Lights/Border2/Light:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 0, 1, 0.498039, 1 ), Color( 0.101961, 0.101961, 0.101961, 1 ), Color( 0, 1, 0.498039, 1 ), Color( 0.101961, 0.101961, 0.101961, 1 ), Color( 0, 1, 0.498039, 1 ), Color( 0.101961, 0.101961, 0.101961, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Lights/Border3/Light:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 0, 1, 0.498039, 1 ), Color( 0.101961, 0.101961, 0.101961, 1 ), Color( 0, 1, 0.498039, 1 ), Color( 0.101961, 0.101961, 0.101961, 1 ), Color( 0, 1, 0.498039, 1 ), Color( 0.101961, 0.101961, 0.101961, 1 ) ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("Effects")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 11 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=2]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 360.0, 340.0, 380.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background/DecorationLeft:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -20.0, 0.0, -40.0, -20.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Background/DecorationRight:rect_position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -20.0, 0.0, -40.0, -20.0 ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("Effects")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 9 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=3]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Meter/Indicators/Pointer:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 3.0, 205.0 ]
}

[node name="Main" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Meter" type="NinePatchRect" parent="."]
margin_top = 32.0
margin_right = 240.0
margin_bottom = 98.0
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 48, 48 )
patch_margin_left = 17
patch_margin_top = 17
patch_margin_right = 17
patch_margin_bottom = 17
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Indicators" type="TextureRect" parent="Meter"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -35.0
margin_right = -16.0
margin_bottom = -15.0
texture = ExtResource( 7 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Target" type="ColorRect" parent="Meter/Indicators"]
show_behind_parent = true
margin_top = -16.0
margin_right = 60.0
margin_bottom = 20.0
color = Color( 0.172775, 0.660156, 0.339877, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pointer" type="Sprite" parent="Meter/Indicators"]
position = Vector2( 3, -4 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Lights" type="HBoxContainer" parent="."]
margin_left = 32.0
margin_top = 328.0
margin_right = 256.0
margin_bottom = 360.0
rect_scale = Vector2( 4, 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Border1" type="TextureRect" parent="Lights"]
margin_left = 80.0
margin_right = 144.0
margin_bottom = 32.0
size_flags_horizontal = 6
texture = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Light" type="ColorRect" parent="Lights/Border1"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.101961, 0.101961, 0.101961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Border2" type="TextureRect" parent="Lights"]
visible = false
margin_left = 80.0
margin_right = 144.0
margin_bottom = 32.0
size_flags_horizontal = 6
texture = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Light" type="ColorRect" parent="Lights/Border2"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.101961, 0.101961, 0.101961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Border3" type="TextureRect" parent="Lights"]
visible = false
margin_left = 137.0
margin_right = 201.0
margin_bottom = 32.0
size_flags_horizontal = 6
texture = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Light" type="ColorRect" parent="Lights/Border3"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.101961, 0.101961, 0.101961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="NinePatchRect" parent="."]
margin_top = 488.0
margin_right = 240.0
margin_bottom = 551.0
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 1 )
draw_center = false
region_rect = Rect2( 0, 0, 48, 31 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="TextureRect" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
texture = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 480, 360 )
current = true

[node name="Effects" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
bus = "Effects"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true
bus = "Music"

[node name="PointerCooldown" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
__meta__ = {
"_editor_description_": "The \"Wait Time\" is the same length as the \"machine_shake\" animation."
}

[node name="CorrectPause" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
__meta__ = {
"_editor_description_": "The \"Wait Time\" is the same length as the \"machine_shake\" animation."
}

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.305882, 0.407843, 0.447059, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="DecorationLeft" type="TextureRect" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -652.0
margin_top = -380.0
margin_right = -636.0
margin_bottom = -190.0
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 6 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DecorationRight" type="TextureRect" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 590.0
margin_top = -380.0
margin_right = 606.0
margin_bottom = -190.0
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 6 )
stretch_mode = 2
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "pointer_move"
anims/light_dance = SubResource( 1 )
anims/machine_shake = SubResource( 2 )
anims/pointer_move = SubResource( 3 )
